==========
Change Log
==========

Version 3.0.0rc2 -
------------------
- Added `url` expression to `pyparsing_common`. (Sample code posted by Wolfgang Fahl,
  very nice!)

- Fixed bug in which ParseResults replaces a collection type value with an invalid
  type annotation (changed behavior in Python 3.9). Addresses issue #276, reported by
  Rob Shuler, thanks.


Version 3.0.0rc1 - September, 2021
----------------------------------
- Railroad diagrams have been reformatted:
  . creating diagrams is easier - call

        expr.create_diagram("diagram_output.html")

    create_diagram() takes 3 arguments:
    . the filename to write the diagram HTML
    . optional 'vertical' argument, to specify the minimum number of items in a path
      to be shown vertically; default=3
    . optional 'show_results_names' argument, to specify whether results name
      annotations should be shown; default=False
  . every expression that gets a name using setName() gets separated out as
    a separate subdiagram
  . results names can be shown as annotations to diagram items
  . Each, FollowedBy, and PrecededBy elements get [ALL], [LOOKAHEAD], and [LOOKBEHIND]
    annotations
  . removed annotations for Suppress elements
  . some diagram cleanup when a grammar contains Forward elements
  . check out the examples make_diagram.py and railroad_diagram_demo.py

- Type annotations have been added to most public API methods and classes.

- Better exception messages to show full word where an exception occurred.

      Word(alphas)[...].parseString("abc 123", parseAll=True)

  Was:
      pyparsing.ParseException: Expected end of text, found '1'  (at char 4), (line:1, col:5)
  Now:
      pyparsing.exceptions.ParseException: Expected end of text, found '123'  (at char 4), (line:1, col:5)

- Suppress can be used to suppress text skipped using "...".

     source = "lead in START relevant text END trailing text"
     start_marker = Keyword("START")
     end_marker = Keyword("END")